Bug 241940 - [JSC] Fractional part of an ISO8601 Duration string must not be interpreted as floating-point
Summary: [JSC] Fractional part of an ISO8601 Duration string must not be interpreted a...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ross Kirsling
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-06-23 16:03 PDT by Ross Kirsling
Modified: 2022-06-23 16:57 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ross Kirsling 2022-06-23 16:03:37 PDT
[JSC] Fractional part of an ISO8601 Duration string must not be interpreted as floating-point
Comment 1 Ross Kirsling 2022-06-23 16:13:23 PDT
Pull request: https://github.com/WebKit/WebKit/pull/1749
Comment 2 EWS 2022-06-23 16:56:54 PDT
Committed 251809@main (92e204d23f40): <https://commits.webkit.org/251809@main>

Reviewed commits have been landed. Closing PR #1749 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2022-06-23 16:57:13 PDT
<rdar://problem/95817314>