[JSC] Fractional part of an ISO8601 Duration string must not be interpreted as floating-point https://bugs.webkit.org/show_bug.cgi?id=241940

Reviewed by Yusuke Suzuki.

The last time part of an ISO8601 Duration string is allowed to have 1 to 9 digits beyond the decimal point.
If this fractional part is interpreted using floating-point arithmetic, off-by-one errors can occur.
(https://tc39.es/proposal-temporal/#sec-temporal-parsetemporaldurationstring)

Contrary to the spec, test262 tests had been expecting IEEE-754-aligned results.
Tests were corrected in tc39/test262#3544; this patch corrects our implementation.

* JSTests/test262/expectations.yaml:
Mark 16 test cases as passing.

* Source/JavaScriptCore/runtime/ISO8601.cpp:
(JSC::ISO8601::handleFraction):

Canonical link: https://commits.webkit.org/251809@main